# testrs

./: BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SPEC.md  deny.toml  mise.toml
.claude/: settings.json
.claude/plans/: 2026-05-23-initial-design.md  2026-05-24-flat-map-and-field-attrs.md  2026-05-24-tier-b-additions.md  2026-05-24-tier-s-a-b-additions.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml
crates/bench/: Cargo.toml  README.md
crates/bench/examples/: compare_sorts.rs  throughput_sweep.rs
crates/bench/src/: lib.rs  stats.rs
crates/bench/tests/: report.rs  stats_pbt.rs
crates/core/: Cargo.toml
crates/core/src/: arbitrary.rs  (+6 more)
crates/fuzz/: Cargo.toml  README.md
crates/fuzz/examples/: find_crash.rs
crates/fuzz/src/: lib.rs  typed.rs
crates/pbt/: Cargo.toml  README.md
crates/pbt-derive/: Cargo.toml
crates/pbt/examples/: derive_demo.rs  fail_demo.rs  sort_props.rs
crates/pbt/src/: assert.rs  async_exec.rs  classify.rs  differential.rs  lib.rs  panic_hook.rs  regression.rs  state_machine.rs  strategy_runner.rs
crates/pbt/tests/: async_support.rs  batch_b.rs  batch_b_part2.rs  combinators_extra.rs  derive_basic.rs  derive_enum.rs  derive_field_attrs.rs  forall_macro.rs  panic_assert_macros.rs  regression_replay.rs  state_machine.rs
crates/propcheck/: Cargo.toml
crates/propcheck-core/: Cargo.toml
crates/propcheck-core/src/: arbitrary.rs  collections.rs  lib.rs  rng.rs  strategy.rs  strategy_domain.rs  strategy_str.rs
crates/propcheck-derive/: Cargo.toml
crates/propcheck-derive/src/: lib.rs
crates/propcheck-fuzz/: Cargo.toml
crates/propcheck-fuzz/examples/: find_crash.rs
crates/propcheck-fuzz/src/: lib.rs  typed.rs
crates/propcheck/examples/: derive_demo.rs  fail_demo.rs  sort_props.rs
crates/propcheck/src/: assert.rs  async_exec.rs  classify.rs  differential.rs  lib.rs  panic_hook.rs  regression.rs  state_machine.rs  strategy_runner.rs
crates/propcheck/tests/: async_support.rs  batch_b.rs  batch_b_part2.rs  combinators_extra.rs  derive_basic.rs  derive_enum.rs  derive_field_attrs.rs  forall_macro.rs  panic_assert_macros.rs  regression_replay.rs  state_machine.rs
issues/: 2026-05-25-21-38-feat-strategy-sample-debug-helper.md  2026-05-25-21-39-feat-prop-assert-panic-no-panic-macros.md  2026-05-25-21-40-feat-strategy-no-shrink-wrapper.md  2026-05-25-21-41-feat-arbitrary-impl-binary-heap.md  2026-05-25-21-42-feat-arbitrary-impl-linked-list.md  2026-05-25-21-43-feat-arbitrary-impl-wrapping-saturating.md  2026-05-25-21-44-feat-arbitrary-impl-ordering.md  2026-05-25-21-45-feat-arbitrary-impl-reverse.md  2026-05-25-21-46-feat-arbitrary-impl-cow.md  2026-05-25-21-47-feat-domain-strategy-pack.md  2026-05-25-21-48-feat-junit-json-output-mode.md  2026-05-25-21-49-feat-cargo-propcheck-cli-subcommand.md  2026-05-25-21-50-feat-test-result-accumulator.md  2026-05-25-21-51-feat-forall-macro-syntactic-sugar.md  2026-05-25-21-52-feat-derive-arbitrary-lifetime-decision.md  2026-05-25-21-53-feat-pbt-generic-test-function-support.md  2026-05-25-21-53-feat-propcheck-generic-test-function-support.md  2026-06-03-05-51-fix-fuzz-report-iterations-semantics.md  2026-06-03-05-52-test-add-derive-parser-error-path-tests.md  2026-06-08-10-09-feat-add-bench-crate.md  2026-06-08-11-54-feat-enhance-bench-throughput-output-sweep.md
issues/completed/: 2026-05-25-20-47-feat-workspace-skeleton-3-crates.md  2026-05-25-20-48-feat-rng-trait-xorshift64.md  2026-05-25-20-49-feat-arbitrary-trait-primitive-impls.md  2026-05-25-20-50-feat-property-runner-forall-run-auto-shrink.md  2026-05-25-20-51-feat-propcheck-seed-env-var.md  2026-05-25-20-52-feat-byte-mutation-fuzzer-corpus-splicing.md  2026-05-25-20-53-feat-strategy-trait-strategy-ext.md  2026-05-25-20-54-feat-strategy-combinators-basic-set.md  2026-05-25-20-55-feat-additional-arbitrary-impls-collections.md  2026-05-25-20-56-feat-object-safe-rng-trait.md  2026-05-25-20-57-chore-bump-msrv-to-1-82.md  2026-05-25-20-58-feat-propcheck-derive-crate-hand-written-parser.md  2026-05-25-20-59-feat-derive-arbitrary-for-structs.md  2026-05-25-21-00-feat-propcheck-attribute-macro.md  2026-05-25-21-01-feat-prop-assert-macros.md  2026-05-25-21-02-feat-prop-assume-macro-prop-discard-payload.md  2026-05-25-21-03-feat-fuzz-typed-typed-fuzzing.md  2026-05-25-21-04-feat-outcome-failed-reproduction-info.md  2026-05-25-21-05-feat-classify-macro-classifications.md  2026-05-25-21-06-feat-into-prop-result-trait.md  2026-05-25-21-07-feat-propcheck-attribute-arguments.md  2026-05-25-21-08-feat-regression-seed-replay.md  2026-05-25-21-09-feat-thread-safe-silent-panic-hook.md  2026-05-25-21-10-feat-arbitrary-impls-smart-pointers-net-types.md  2026-05-25-21-11-feat-fuzz-dictionary.md  2026-05-25-21-12-feat-crash-dedup-multiple-crash-accumulation.md  2026-05-25-21-13-feat-fuzz-corpus-crash-disk-persistence.md  2026-05-25-21-14-feat-derive-arbitrary-for-enums.md  2026-05-25-21-15-feat-derive-arbitrary-where-clause-support.md  2026-05-25-21-16-feat-string-structured-generators-module.md  2026-05-25-21-17-feat-prop-assert-matches-macro.md  2026-05-25-21-18-feat-prop-compose-macro.md  2026-05-25-21-19-feat-tuple-arbitrary-arities-5-to-8.md  2026-05-25-21-20-feat-state-machine-framework.md  2026-05-25-21-21-feat-async-support-block-on.md  2026-05-25-21-22-feat-prop-skip-macro-prop-skip-payload.md  2026-05-25-21-23-feat-prop-with-context-macro.md  2026-05-25-21-24-feat-outcome-accessor-methods.md  (+29 more)
scripts/: ci-publish-check-dangerously.sh  ci-publish-status-dangerously.sh  ci-publish.sh  ci.sh  clippy.sh  deny.sh  doc.sh  fmt.sh  guard-branch-name.sh  preflight.sh  report-check-local.sh  report-status-local.sh  test.sh
(+12 files in other folders)
