[workspace]
resolver = "2"
members = [
    "crates/propcheck-core",
    "crates/propcheck",
    "crates/propcheck-fuzz",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ginokent/test-rs"
rust-version = "1.70"

[workspace.lints.rust]
unsafe_code = "forbid"
