[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/pbt",
    "crates/fuzz",
    "crates/pbt-derive",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ginokent/testrs"
rust-version = "1.82"

[workspace.lints.rust]
unsafe_code = "forbid"
