[package]
name = "testrs-fuzz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "バイト指向のターゲットが panic するまで実行する、インプロセスの mutation fuzzer。外部依存なし。"

[dependencies]
testrs-core = { path = "../core", version = "0.1.0" }

[lints]
workspace = true
