[package]
name = "testrs-pbt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "自動 shrink 機能付きのプロパティベーステストランナー。外部依存なし。"

[dependencies]
testrs-core = { path = "../core", version = "0.1.0" }
testrs-pbt-derive = { path = "../pbt-derive", version = "0.1.0" }

[lints]
workspace = true
