[package]
name = "propcheck-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core abstractions (Rng, Arbitrary, Shrink) for property-based testing and fuzzing. No external dependencies."

[lints]
workspace = true
