[package]
name = "propcheck-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hand-rolled #[derive(Arbitrary)] and #[propcheck] proc-macros. Built on the rustc-provided proc_macro crate only — no external dependencies."

[lib]
proc-macro = true

[lints]
workspace = true
