[package]
name = "propcheck-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "手書きの#[derive(Arbitrary)]および#[propcheck]プロシージャマクロ。rustcが提供するproc_macroクレートのみに依存し、外部依存はありません。"

[lib]
proc-macro = true

[lints]
workspace = true
