[package]
name = "propcheck-fuzz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "In-process mutation fuzzer that drives a byte-oriented target until it panics. No external dependencies."

[dependencies]
propcheck-core = { path = "../propcheck-core", version = "0.1.0" }

[lints]
workspace = true
