[package]
name = "propcheck-fuzz"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "バイト指向のターゲットがpanicするまで実行する、インプロセスのミューテーションファザー。外部依存なし。"

[dependencies]
propcheck-core = { path = "../propcheck-core", version = "0.1.0" }

[lints]
workspace = true
