[package]
name = "propcheck"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Property-based testing runner with automatic shrinking. No external dependencies."

[dependencies]
propcheck-core = { path = "../propcheck-core", version = "0.1.0" }
propcheck-derive = { path = "../propcheck-derive", version = "0.1.0" }

[lints]
workspace = true
